# EncryptoDrive

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  build.ps1  build.py  build.sh  convert_icons.py  encrypto.pc.in  icons.py  run-encrypto-gui.sh
cmake/: EncryptoDriveConfig.cmake.in  FindGTest.cmake  cmake_uninstall.cmake.in  encrypto-config.cmake.in
include/encryptodrive/keymanagement/: keybackup.hpp  publickeystore.hpp  sharemanager.hpp  shareprotocol.hpp
src/: CMakeLists.txt  main.cpp
src/audit/: CMakeLists.txt  auditlog.cpp  auditlog.hpp
src/auth/: CMakeLists.txt  auth.cpp  auth.hpp  passwordvalidator.cpp  passwordvalidator.hpp
src/core/: CMakeLists.txt  core_config.hpp.in  encryptionengine.cpp  encryptionengine.hpp  fileintegrity.cpp  fileintegrity.hpp  keyrotation.cpp  keyrotation.hpp  keysmanager.cpp  keysmanager.hpp  openssl-fips.cnf  securememory.cpp  securememory.hpp  version.hpp.in
src/core/compat/: duration.hpp  span.hpp
src/core/crypto/: signaturesystem.cpp  signaturesystem.hpp
src/core/integrity/: merkletree.cpp  merkletree.hpp
src/core/version/: fileversion.cpp  fileversion.hpp  versionstore.cpp  versionstore.hpp
src/fs/: CMakeLists.txt  fsconfig.hpp.in  fsops.cpp  fsops.hpp  fusefs.cpp  fusefs.hpp  securedelete.cpp  securedelete.hpp
src/gui/: CMakeLists.txt  main.cpp  resources.qrc
src/gui/dialogs/: mountdialog.cpp  mountdialog.hpp  mountdialog.ui  passworddialog.cpp  passworddialog.hpp  passworddialog.ui
src/gui/resources/config/: default.json  keymap.json
src/gui/widgets/: drivelist.cpp  drivelist.hpp
src/gui/windows/: mainwindow.cpp  mainwindow.hpp  mainwindow.ui
src/keymanagement/: CMakeLists.txt  keybackup.cpp  keybackup.hpp  publickeystore.cpp  publickeystore.hpp  sharemanager.cpp  sharemanager.hpp  shareprotocol.cpp
test/: CMakeLists.txt
test/core/: CMakeLists.txt  keyrotation_test.cpp
tests/: CMakeLists.txt  test_config.h.in
tests/core/crypto/: signaturesystem_test.cpp
tests/core/integrity/: merkletree_test.cpp
tests/core/version/: fileversion_test.cpp  versionstore_test.cpp
